--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,5 @@
-@import url("../../public/css/bootstrap.css");
+@import url("../../public/css/bootstrap.min.css");
+@import url("../../public/css/dataTables.css");
 
 * {
     padding: 0%;
@@ -9,8 +10,12 @@
 
 .custom-navbar {
     width: 100%;
-    height: 4vh;
+    height: 5vh;
     background-color: #292835;
+}
+
+.content {
+    width: 100vw !important;
 }
 
 .topics {
@@ -27,7 +32,6 @@
 
 .topic {
     text-align: center;
-    height: 100%;
     padding: .5% .5%;
     color: white;
 }
@@ -194,4 +198,11 @@ td {
 
 .delete {
     background-color: red;
+}
+
+.landing-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
