--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -16,6 +16,7 @@
 
 .content {
     width: 100vw !important;
+    height: 95vh !important;
 }
 
 .topics {
@@ -205,4 +206,5 @@ td {
     justify-content: center;
     align-items: center;
     width: 100%;
+    height: 100%;
 }
