--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,10 +8,20 @@
     text-decoration: none;
 }
 
+a {
+    text-decoration: none !important;
+}
+
 .custom-navbar {
     width: 100%;
     height: 5vh;
     background-color: #292835;
+}
+
+.topic-loop {
+    width: 90%;
+    display: flex;
+    flex-direction: row;
 }
 
 .content {
@@ -205,6 +215,39 @@ td {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     width: 100%;
     height: 100%;
+}
+
+.topic-links {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+.topic-btn {
+    background-color: #D9EEE1;
+    text-decoration: none;
+    color: black;
+    padding: 5px 20px;
+    width: 100px;
+    border-radius: 999px;
+    text-align: center;
+    transition: all .5s ease-in-out;
+}
+
+.topic-btn:hover {
+    transform: scale(1.1);
+}
+
+.main-landing {
+    width: 50%;
+    border: solid 1px rgba(208, 208, 208, 0.678);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2% 5%;
+    border-radius: 10px;
 }
