--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -18,6 +18,12 @@ a {
     background-color: #292835;
 }
 
+.subcontent {
+    background-color: blue !important;
+    color: white !important;
+    padding: 1.3% 2% !important;
+}
+
 .topic-loop {
     width: 90%;
     display: flex;
@@ -196,7 +202,7 @@ tbody > tr:nth-child(odd) {
 
 .option-button {
     padding: 1% 1%;
-    width: 60px;
+    width: 100px;
     background-color: green;
     color: white;
     border: none;
